// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parserES5ForOfStatement2.ts 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
//@target: ES5
for (var of X) {
}

=====================================output=====================================
//@target: ES5
for (var of X) {
}

================================================================================
`;

exports[`parserES5ForOfStatement21.ts 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
//@target: ES5
for (var of of) { }

=====================================output=====================================
//@target: ES5
for (var of of) {
}

================================================================================
`;

exports[`parserForInStatement2.ts 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
for (var in X) {
}

=====================================output=====================================
for (var in X) {
}

================================================================================
`;
